recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:3: error: not found: value lenght
	avance(lenght:Double)
               ^Spiral:5: error: not found: type int
	spiral(steps-1,angle:int,lenght+3, increment:int)
                             ^