recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
	avance(lenght:Double)
	gauche(angle:Double)
	spiral(steps-1,angle:int,lenght+3, increment:int)
}
